[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myfinlab"
version = "1.0.0"
description = "Unified Financial Machine Learning & Statistical Arbitrage Library - Combining mlfinlab and arbitragelab"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "MyFinLab Community", email = "community@myfinlab.org"}
]
maintainers = [
    {name = "MyFinLab Community", email = "community@myfinlab.org"}
]
keywords = [
    "finance",
    "machine-learning",
    "arbitrage",
    "pairs-trading",
    "statistical-arbitrage",
    "quantitative-finance",
    "trading",
    "investment",
    "portfolio-optimization",
    "financial-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "statsmodels>=0.14.0",
    "networkx>=3.0",

    # ArbitrageLab specific dependencies
    "POT>=0.9.4",
    "arch>=6.3.0",
    "werkzeug>=2.3.0",
    "yahoo-fin>=0.8.9.1",
    "yfinance>=0.2.37",
    "cython>=3.0.0",
    "dash>=2.14.0",
    "mpmath>=1.3.0",
    "pmdarima>=2.0.4",
    "pyvinecopulib>=0.6.5",
    "requests_html>=0.10.0",
    "pyzmq>=26.0.0",
    "seaborn>=0.12.2",
    "lxml>=4.9.1",
    "protobuf>=4.21.0",
    "jupyter-dash>=0.4.0",

    # MLFinLab specific dependencies
    "numba>=0.59.0",
    "toolz>=0.12.0",
    "cloudpickle>=2.0.0",
]

[project.optional-dependencies]
# Deep learning support
tensorflow = [
    "tensorflow>=2.16.0",
    "keras>=3.0.0",
]
tensorflow-macos = [
    "tensorflow-macos>=2.16.0",
    "keras>=3.0.0",
]
# Convex optimization
cvxpy = [
    "cvxpy>=1.5.0",
]
# All optional dependencies
all = [
    "myfinlab[tensorflow,cvxpy]",
]
# Development dependencies
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=3.0.0",
    "coverage>=7.2.0",
    "pylint>=3.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
# Documentation dependencies
docs = [
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-tabs>=3.4.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=2.0.0",
    "docutils>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/myfinlab/myfinlab"
Documentation = "https://myfinlab.readthedocs.io"
Repository = "https://github.com/myfinlab/myfinlab"
"Bug Reports" = "https://github.com/myfinlab/myfinlab/issues"
"Source Code" = "https://github.com/myfinlab/myfinlab"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["myfinlab*", "mlfinlab*", "arbitragelab*"]
exclude = ["docs*", "tests*", "*.tests"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.csv", "*.json"]

# Black formatting
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

# isort import sorting
[tool.isort]
profile = "black"
line_length = 100

# Pylint configuration
[tool.pylint.main]
py-version = "3.8"

[tool.pylint.messages_control]
disable = [
    "C0330",  # Wrong hanging indentation
    "C0326",  # Bad whitespace
]

[tool.pylint.format]
max-line-length = 100

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=myfinlab --cov-report=html --cov-report=term"

# Coverage configuration
[tool.coverage.run]
source = ["myfinlab"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
